MediaDevices.getUserMedia should reject promise instead of throwing exceptions https://bugs.webkit.org/show_bug.cgi?id=145282

Reviewed by Darin Adler.

Source/WebCore:

Ensuring at the custom binding level that all potential errors are used to reject promise.
Cleaned up the wrappers by removing unneeded RefPtr.

Covered by modified test.

* Modules/mediastream/MediaDevices.cpp:
(WebCore::MediaDevices::getUserMedia):
* Modules/mediastream/MediaDevices.h:
* Modules/mediastream/UserMediaRequest.cpp:
(WebCore::UserMediaRequest::create):
* bindings/js/JSMediaDevicesCustom.cpp:
(WebCore::JSMediaDevices::getUserMedia):

LayoutTests:

Updating test to expect rejection and not error throwing.

* fast/mediastream/MediaDevices-getUserMedia-expected.txt:
* fast/mediastream/MediaDevices-getUserMedia.html:


Canonical link: https://commits.webkit.org/163488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184984 268f45cc-cd09-0410-ab3c-d52691b4dbfc